f-feed: fix story create ux, tooltip and z-index

--- a/frontend/src/css/main/helpers.sass
+++ b/frontend/src/css/main/helpers.sass
@@ -9,6 +9,14 @@
 .rounded-full
   border-radius: 100%
 
+.z-10
+  z-index: 10
+.z-20
+  z-index: 20
+.z-30
+  z-index: 30
+
+
 .flex-shrink-0
   flex-shrink: 0
 .flex-shrink-1
